app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: khafan-app
  labels:
    environment: production
    app: khafan-app
spec:
  containers:
    - name: app
      image: khafan_app:v1
