mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    environment: production
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      environment: production
  template:
    metadata:
      labels:
        app: mysql
        environment: production
    spec:
      containers:
        - name: mysql
          image: mysql:8.3.0
