app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: khafan-app
    environment: production
  name: khafan-app
spec:
  ports:
    - nodePort: 30537
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: khafan-app
    environment: production
  type: NodePort
